--- a/.jshintrc
+++ b/.jshintrc
@@ -1,10 +1,16 @@
 {
+  "asi": true,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
-  "latedef": true,
+  "indent": 2,
+  "latedef": false,
+  "laxcomma": true,
   "newcap": true,
   "noarg": true,
+  "nonbsp": true,
+  "nonew": true,
+  "quotmark": "single",
   "sub": true,
   "undef": true,
   "unused": true,
