--- a/.jshintrc
+++ b/.jshintrc
@@ -1,14 +1,14 @@
 {
   "asi": true,
-  "curly": true,
+  "curly": false,
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
   "latedef": false,
+  "laxbreak": true,
   "laxcomma": true,
   "newcap": true,
   "noarg": true,
-  "nonbsp": true,
   "nonew": true,
   "quotmark": "single",
   "sub": true,
