--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "files": [
     ""
   ],
-  "keywords":[
+  "keywords": [
     "math",
     "symbolic",
     "computation"
@@ -31,12 +31,10 @@
     "lodash-node": "~2.4.1"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.7.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-watch": "~0.5.0",
-    "load-grunt-tasks": "~0.2.0",
-    "time-grunt": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "should": "^3.2.0",
+    "grunt": "^0.4.4",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-mocha-test": "^0.10.0"
   },
   "scripts": {
     "test": "grunt"
